# cvFaceMaker

./: CMakeLists.txt  README.md  __init__.py  faceLocate.py  myCvlib.py  output.avi
src/: cvFaceMaker.cpp  cvFaceMaker.h  dlibHelper.cpp
